--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # JetBrains PyCharm IDE
 .idea/
-Data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -114,3 +114,4 @@ fairseq/temporal_convolution_tbc
 
 # data
 data-bin/
+checkpoints
